--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #94bdec;
     color: white;
     padding: 10px 20px;
     width: 100vw;
