refactor to outlet router

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #94bdec;
-    color: white;
+    color: rgb(224, 234, 107);
     padding: 10px 20px;
     width: 100vw;
 }
